--- a/3_Exercise Solutions_Intro_to_Data_Structures.ipynb
+++ b/3_Exercise Solutions_Intro_to_Data_Structures.ipynb
@@ -21,7 +21,7 @@
         "id": "M3qYH6exuOEj"
       },
       "source": [
-        "# Exercises - You made it!\n"
+        "# Exercises Solutions - You made it!\n"
       ]
     },
     {
